maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:63: error: ';' expected but 'else' found.
  else prendBiscuit()
  ^